content/terraform-plugin-framework/v0.17.x/docs/plugin/framework/migrating/attributes-blocks/types.mdx
---
page_title: 'Attribute Types: Migrating from SDKv2 to the Framework'
description: >-
  Migrate attribute type from SDKv2 to the plugin Framework
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-06T10:49:53-05:00
last_modified: 2025-03-14T14:39:20-05:00
# END AUTO GENERATED METADATA
---

# Attribute Types

-> **Note:** The Plugin Framework is in beta.

An attribute either contains a primitive type, such as an integer or a string, or contains other attributes. Attributes
that contain other attributes are referred to as nested attributes. Refer to
[Schemas - Attributes](/terraform/plugin/framework/schemas#type) in the Framework documentation for details.

This page explains how to migrate a primitive attribute from SDKv2 to the plugin Framework. For an example of
migrating a nested block to a nested attribute, refer to [Providers](/terraform/plugin/framework/migrating/providers#example-1) in
this guide.

## SDKv2

In SDKv2, attribute types are defined by the `Type` field on the attribute's `schema.Schema` struct.

```go
func resourceExample() *schema.Resource {
    return &schema.Resource{
         /* ... */
        Schema: map[string]*schema.Schema{
            "bool_example": {
                Type:    schema.TypeBool,
                /* ... */
            },
            "float64_example": {
                Type:    schema.TypeFloat,
                /* ... */
            },
            "int64_example": {
                Type:    schema.TypeInt,
                /* ... */
            },
            "list_example": {
                Type:    schema.TypeList,
                Elem:    &schema.Schema{
			        Type: schema.TypeBool,
		        },
                /* ... */
            },
            "map_example": {
                Type:    schema.TypeMap,
                Elem:    &schema.Schema{
			        Type: schema.TypeFloat,
		        },
                /* ... */
            },
            "set_example": {
                Type:    schema.TypeSet,
                Elem:    &schema.Schema{
			        Type: schema.TypeInt,
		        },
                /* ... */
            },
            "string_example": {
                Type:    schema.TypeString,
                /* ... */
            },
            /* ... */
```
## Framework

In the Framework, you set your attribute's type with the attribute's `schema.Attribute` implementation.

```go
func (r *ThingResource) Schema(ctx context.Context, req resource.SchemaRequest, resp *resource.SchemaResponse) {
    resp.Schema = schea.Schema{
        /* ... */
        Attributes: map[string]schema.Attribute{
            "bool_example": schema.BoolAttribute{
				/* ... */
			},
			"float64_example": schema.Float64Attribute{
				/* ... */
			},
			"int64_example": schema.Int64Attribute{
				/* ... */
			},
			"list_example": schema.ListAttribute{
				ElementType: types.BoolType,
				/* ... */
			},
			"map_example": schema.MapAttribute{
				ElementType: types.Float64Type,
				/* ... */
			},
			"set_example": schema.SetAttribute{
				ElementType: types.Int64Type,
				/* ... */
			},
			"string_example": schema.StringAttribute{
				/* ... */
			},
            /* ... */
```

## Migration Notes

Remember the following differences between SDKv2 and the Framework when completing the migration.

- In the Framework, the `schema.Attribute` implementation determines the required details.

## Example

The following examples show how to migrate portions of the
[http](https://github.com/hashicorp/terraform-provider-http) provider.

For a complete example, clone the
`terraform-provider-http` repository and compare the `data_source.go` file in
[v2.2.0](https://github.com/hashicorp/terraform-provider-http/blob/v2.2.0/internal/provider/data_source.go)
and the `data_source_http.go` file
[after the migration](https://github.com/hashicorp/terraform-provider-http/blob/8527d5b4546b54cdef246a13befc5745dbbbf740/internal/provider/data_source_http.go).

### SDKv2

The following example from the `data_source.go` file shows the implementation of the type field of the `url` attribute
for the `http` data source with SDKv2.

```go
func dataSource() *schema.Resource {
    return &schema.Resource{
        Schema: map[string]*schema.Schema{
            "url": {
                Type:        schema.TypeString,
                /* ... */
            },
            /* ... */
```

### Framework

The following example from the `data_source_http.go` file shows how the type of the `url` attribute for the `http` data
source is defined with the Framework after the migration.

```go
func (d *httpDataSource) Schema(ctx context.Context, req datasource.SchemaRequest, resp *datasource.SchemaResponse) {
    resp.Schema = schema.Schema{
        Attributes: map[string]schema.Attribute{
            "url": schema.StringAttribute{
                /* ... */
            },
            /* ... */
```

The following examples show how to migrate portions of the
[tls](https://github.com/hashicorp/terraform-provider-tls) provider.

For a complete example, clone the
`terraform-provider-tls` repository and compare the `common_cert.go` file in
[v3.4.0](https://github.com/hashicorp/terraform-provider-tls/blob/v3.4.0/internal/provider/common_cert.go)
and the `resource_cert_request.go` file
[after the migration](https://github.com/hashicorp/terraform-provider-tls/blob/4dafb105818e45a88532f917e7b170ee2a9bb092/internal/provider/resource_cert_request.go).

### SDKv2

The following example from the `common_cert.go` file shows the implementation of the type field of the `dns_names`
attribute with SDKv2.

```go
func resourceCertRequest() *schema.Resource {
    return &schema.Resource{
        Schema: map[string]*schema.Schema{
            "dns_names": {
                Type:    schema.TypeList,
                Elem:    &schema.Schema{
			        Type: schema.TypeString,
		        },
                /* ... */
            },
            /* ... */
```

Refer to [Terraform Concepts - Attributes](/terraform/plugin/framework/handling-data/terraform-concepts#attributes)

The following example from the `data_source_http.go` file shows how the type of the `url` attribute for the `http` data
source is defined with the Framework after the migration.

```go
func (r *certRequestResource) Schema(ctx context.Context, req resource.SchemaRequest, resp *resource.SchemaResponse) {
    resp.Schema = schema.Schema{
        Attributes: map[string]schema.Attribute{
            "dns_names": schema.ListAttribute{
                ElementType: types.StringType,
                /* ... */
            },
            /* ... */
```
